bk_ida/gccida/c0/eliminate_constant_term
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_constant_term/src/explow.c:679:47: error: use of undeclared identifier 'machine_mode'
&& ( tem = simplify_binary_operation( PLUS, ( machine_mode)BYTE2( *( _DWORD *)xa), *constptra, *( rtx *)&xa[1])) != 0LL 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_constant_term/src/explow.c:690:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( x1 == ( rtx)xa[1] && x0 == xa->fld[0].rtx ) 
                 ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_constant_term/src/explow.c:692:42: error: use of undeclared identifier 'machine_mode'
tem = simplify_binary_operation( PLUS, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)xa), *constptra, tem); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_constant_term/src/explow.c:692:57: error: expected expression
tem = simplify_binary_operation( PLUS, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)xa), *constptra, tem); 
                                                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_constant_term/src/explow.c:700:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)xa), x0, x1); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_constant_term/src/explow.c:700:47: error: expected expression
return gen_rtx_fmt_ee( PLUS, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)xa), x0, x1); 
                                              ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_constant_term/src/obj/explow.o] Error 1
